# simple-synth-clap

./: CMakeLists.txt  Info.plist  Info.plist.in  LICENSE  Makefile  README.md  build.sh  install.sh  test_plugin  test_plugin.cpp
src/: plugin.cpp  simple_synth.cpp  simple_synth.h  ui.h  ui.mm  voice.cpp  voice.h
